tests/errors/err_multiple_undefined.bas
10 GOTO 100
20 PRINT "HELLO"
30 GOSUB 500
40 END
